<resources>
    <string name="app_name">Pokedex</string>

    <!-- login screen start -->
    <string name="email">Email</string>
    <string name="email_error">You email is required</string>
    <string name="password">Password</string>
    <string name="password_error">Please write a password</string>
    <string name="credentials_error">Wrong email or password</string>
    <string name="login">Log in</string>
    <!-- login screen end -->

    <!-- home screen start -->
    <string name="welcome">Welcome</string>
    <string name="logout_confirm">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="connection_error">Network error</string>
    <string name="try_again">Try again</string>
    <string name="empty_list">Not have Pokemons</string>
    <string name="loading_more">Loading more pokemons...</string>
    <!-- home screen end -->
</resources>
